[package]
name = "dapp_di_sistema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tokio = {version = "1.32.0", features = ["full"]}
identity_iota = "0.6.3"
sha256 = "1.4.0"
pretty_env_logger = "0.5.0"
serde_json = "1.0.107"